--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ text-align:center;
 
 .image2 {
 text-align:center;
-padding-top: 20px;
+padding-top: 25px;
+
 }
 .image2 img {
   width:1475px;
@@ -91,18 +92,61 @@ padding-top: 20px;
 
 .image3 {
 text-align:center;
-padding-top: 20px;
+padding-top: 25px;
+
 }
 .image3 img {
   width:1475px;
 }
+
+.image4 {
+text-align:center;
+padding-top: 25px;
+}
+.image4 img {
+  width:1475px;
+}
+
+.image5 {
+text-align:center;
+padding-top: 25px;
+}
+.image5 img {
+  width:1475px;
+}
+
+.image6 {
+text-align:center;
+padding-top: 25px;
+}
+.image6 img {
+  width:1475px;
+}
+
+.image7 {
+text-align:center;
+padding-top: 20px;
+}
+.image7 img {
+  width:1475px;
+}
+
+.image8 {
+text-align:center;
+padding-top: 20px;
+}
+.image8 img {
+  width:1475px;
+}
+
+
 .br-sp {
   display: none;
 }
 
 
 .sakuhin-text {
-  padding-top:31px;
+  padding-top:40px;
   margin:0 auto;
   width:1475px;
 }
@@ -147,6 +191,30 @@ padding-top: 20px;
     .image1 img {
       width:1100px;
     }
+  .image2 img {
+      width:1100px;
+    }
+  .image3 img {
+      width:1100px;
+    }
+  .image4 img {
+      width:1100px;
+    }
+  .image5 img {
+      width:1100px;
+    }
+  .image6 img {
+      width:1100px;
+    }
+  .image7 img {
+      width:1100px;
+    }
+  .image8 img {
+      width:1100px;
+    }
+    .sakuhin-text {
+      width:1100px;
+    }
     .sakuhin-text {
       width:1100px;
     }
@@ -164,6 +232,27 @@ padding-top: 20px;
     box-sizing: border-box;
     }
     .image1 img {
+      width:725px;
+    }
+  .image2 img {
+      width:725px;
+    }
+  .image3 img {
+      width:725px;
+    }
+  .image4 img {
+      width:725px;
+    }
+  .image5 img {
+      width:725px;
+    }
+  .image6 img {
+      width:725px;
+    }
+  .image7 img {
+      width:725px;
+    }
+  .image8 img {
       width:725px;
     }
     .sakuhin-text {
@@ -222,6 +311,32 @@ padding-top: 20px;
     .image1 img {
       width:600px;
     }
+  .image2 img {
+      width:600px;
+    }
+  .image3 img {
+      width:600px;
+    }
+  .image4 img {
+      width:600px;
+    }
+  .image5 img {
+      width:600px;
+    }
+  .image6 img {
+      width:600px;
+    }
+  .image7 img {
+      width:600px;
+    }
+  .image8 img {
+      width:600px;
+    }
+  
+  
+  
+  
+  
     .sakuhin-text {
       width:600px;
     }
@@ -281,11 +396,63 @@ padding-top: 20px;
       font-weight: 300;
     line-height: :0px;
     }
-
-    .image1 img {
+  
+  
+  .image1 img {
       width:100%;
     }
-    .sakuhin-text {
+  
+   .image2 {
+    padding-top: 13px;
+    }
+  .image2 img {
+      width:100%;
+    }
+  
+     .image3 {
+    padding-top: 13px;
+    }
+  .image3 img {
+      width:100%;
+    }
+  
+     .image4 {
+    padding-top: 13px;
+    }
+  .image4 img {
+      width:100%;
+    }
+  
+     .image5 {
+    padding-top: 13px;
+    }
+  .image5 img {
+      width:100%;
+    }
+  
+     .image6 {
+    padding-top: 13px;
+    }
+  .image6 img {
+      width:100%;
+    }
+  
+     .image7 {
+    padding-top: 13px;
+    }
+  .image7 img {
+      width:100%;
+    }
+  
+     .image8 {
+    padding-top: 13px;
+    }
+  .image8 img {
+      width:100%;
+    }
+  
+
+  .sakuhin-text {
       padding-top:30px;
       width:320px;
     }
