--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ padding-top: 20px;
   font-size:16px;
   letter-spacing: 1.5px;
   line-height: 0px;
-  font-weight: 400;
+  font-weight: bolder;
   margin:0;
 }
 
@@ -162,7 +162,7 @@ padding-top: 20px;
   padding-top: 3px;
   font-size:14.5px;
   line-height: 24.5px;
-  font-weight: 300;
+  font-weight: normal;
   letter-spacing: 1px;
 
 }
